# murphy-opencv-study

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/study/ndk35_opencv_study/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTracker.cpp  FaceTracker.h  native-lib.cpp
app/src/main/cpp/include/opencv2/: highgui.hpp
app/src/main/java/com/study/ndk35_opencv_study/: CameraHelper.kt  FaceTracker.kt  MainActivity.kt  NativeHelper.kt  Utils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/study/ndk35_opencv_study/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle.kts
opencv/src/androidTest/java/com/study/opencv/: ExampleInstrumentedTest.kt
opencv/src/main/: AndroidManifest.xml
opencv/src/test/java/com/study/opencv/: ExampleUnitTest.kt
